--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.bulbasaur {
+  display: inline-block;
+}
+.kubfu {
+  display: inline-block;
+}
+.status {
+  position: fixed;
+  left: 10%;
+}
